[gd_scene load_steps=25 format=3 uid="uid://cb5o8wcppm50n"]

[ext_resource type="Script" path="res://menus/settings/settings.gd" id="1_qrc6b"]
[ext_resource type="FontFile" uid="uid://ccab1rn6kopgv" path="res://themes/fonts/Kenney Future Narrow.ttf" id="1_xg20g"]
[ext_resource type="PackedScene" uid="uid://cy833eh84rbmt" path="res://menus/components/button/base_button.tscn" id="2_143aq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gtlp2"]
load_path = "res://.godot/imported/check_square_grey_checkmark.png-c1e8f95742984c7e8ee364a9a5437c43.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_e25qh"]
load_path = "res://.godot/imported/check_round_grey_circle.png-b3758cea48781e74f963de106e453838.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jsg0d"]
load_path = "res://.godot/imported/check_round_grey.png-51a7bfed8ee63651dd46238de94a1d11.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_boykx"]
load_path = "res://.godot/imported/check_square_grey.png-984e380882d8e627740df19235202429.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_px7u0"]
load_path = "res://.godot/imported/icon_circle.png-b41c599528f97434c9ce1681c7ada6c7.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c43w5"]
load_path = "res://.godot/imported/icon_outline_circle.png-3ad3b1a2e8a1cc9d42450c221eeade98.ctex"

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fhf2q"]
color = Color(0.717162, 0.594107, 0.377952, 1)
thickness = 8

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_m5w31"]
load_path = "res://.godot/imported/button_rectangle_depth_line.png-24000f75f6d3cf673ad65d2d32c3783f.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w2ff8"]
texture = SubResource("CompressedTexture2D_m5w31")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 14.0
texture_margin_bottom = 22.0
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8d870"]
load_path = "res://.godot/imported/button_rectangle_line.png-0b77ae50a044dc404554c4fdd41c15e7.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0ym0m"]
texture = SubResource("CompressedTexture2D_8d870")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fpowt"]
load_path = "res://.godot/imported/button_rectangle_depth_flat.png-b4d8475db21d3d5950157ac2b0f87544.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5pys8"]
texture = SubResource("CompressedTexture2D_fpowt")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 17.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k0erx"]
texture = SubResource("CompressedTexture2D_fpowt")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 20.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_i0u17"]
load_path = "res://.godot/imported/check_square_grey_checkmark.png-f7fbf80bb8b2164be37a09241966726f.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_30jac"]
load_path = "res://.godot/imported/check_round_grey_circle.png-a67030c7a17c9dc75899e9993dd5ca9e.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mv58d"]
load_path = "res://.godot/imported/check_round_grey.png-ae1c0cab308a818e318d975b419b614e.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kn0qd"]
texture = SubResource("CompressedTexture2D_fpowt")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 20.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_korqp"]
load_path = "res://.godot/imported/button_rectangle_flat.png-a8d6a6eb64ab5b319fc33d8096b572b0.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q0uuh"]
texture = SubResource("CompressedTexture2D_korqp")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 14.0

[sub_resource type="Theme" id="Theme_jllrt"]
CheckBox/colors/font_color = Color(0, 0, 0, 1)
CheckBox/fonts/font = ExtResource("1_xg20g")
CheckBox/icons/checked = SubResource("CompressedTexture2D_gtlp2")
CheckBox/icons/radio_checked = SubResource("CompressedTexture2D_e25qh")
CheckBox/icons/radio_unchecked = SubResource("CompressedTexture2D_jsg0d")
CheckBox/icons/unchecked = SubResource("CompressedTexture2D_boykx")
HSlider/icons/grabber = SubResource("CompressedTexture2D_px7u0")
HSlider/icons/grabber_highlight = SubResource("CompressedTexture2D_c43w5")
HSlider/styles/slider = SubResource("StyleBoxLine_fhf2q")
Label/fonts/font = ExtResource("1_xg20g")
OptionButton/styles/focus = null
OptionButton/styles/hover = null
OptionButton/styles/hover_mirrored = null
OptionButton/styles/hover_pressed = null
OptionButton/styles/hover_pressed_mirrored = null
OptionButton/styles/normal = SubResource("StyleBoxTexture_w2ff8")
OptionButton/styles/pressed = SubResource("StyleBoxTexture_0ym0m")
Panel/styles/panel = SubResource("StyleBoxTexture_5pys8")
PanelContainer/styles/panel = SubResource("StyleBoxTexture_k0erx")
PopupMenu/fonts/font = ExtResource("1_xg20g")
PopupMenu/icons/checked = SubResource("CompressedTexture2D_i0u17")
PopupMenu/icons/radio_checked = SubResource("CompressedTexture2D_30jac")
PopupMenu/icons/radio_unchecked = SubResource("CompressedTexture2D_mv58d")
TabContainer/styles/panel = SubResource("StyleBoxTexture_kn0qd")
TabContainer/styles/tab_unselected = SubResource("StyleBoxTexture_q0uuh")

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jllrt")
script = ExtResource("1_qrc6b")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -155.5
offset_right = 174.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
selected = 3
item_count = 5
popup/item_0/text = "640x480"
popup/item_0/id = 3
popup/item_1/text = "800x600"
popup/item_1/id = 2
popup/item_2/text = "1024x768"
popup/item_2/id = 4
popup/item_3/text = "1920x1080"
popup/item_3/id = 3
popup/item_4/text = "2560x1440"
popup/item_4/id = 1

[node name="FullscreenCheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Fullscreen"

[node name="MasterVolume" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="SFXVolume" type="Label" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" parent="." instance=ExtResource("2_143aq")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -53.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 10
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/MasterVolumeSlider" to="." method="_on_audio_master_slider_drag_ended"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/MasterVolumeSlider" to="." method="_on_audio_master_slider_value_changed"]
[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/SFXVolumeSlider" to="." method="_on_audio_sfx_slider_drag_ended"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
